<resources>
    <string name="app_name">TaxiDriver</string>
    <string name="title_activity_main">TaxiDriver</string>
    <string name="id">ID</string>
    <string name="Name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="CreditCard">Credit Card</string>
    <string name="Statusofdrive">Status of drive</string>
    <string name="Startaddress">Start address</string>
    <string name="Endaddress">End address</string>
    <string name="Password">Password</string>
    <string name="Order">Order</string>
    <string name="NoaccountyetCreateone">Do not have an account yet? Create one</string>
    <string name="Login">Get Start</string>
    <string name="Login1">Login</string>
    <string name="Register">Register</string>
    <string name="SignUp">Sign up</string>
    <string name="Welcome">welcome to get taxi application!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="registration">Registration</string>
    <string name="title_activity_driver_navigation">DriverNavigation</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <string name="action_example">Example action</string>
    <string name="search_by_distance">search by distance</string>
    <string name="action_settings">Settings</string>
    <string name="available_drives">Available Drives</string>
    <string name="my_drives">My Drives</string>
    <string name="exit"> Exit</string>
    <string name="title_activity_dprofile">Dprofile</string>
    <string name="fragment_available_drives">Available Drives;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_xxx">Profile</string>
    <string name="choose">Choose</string>
    <string name="address">address</string>
    <string name="visit_our_web">visit our web</string>





</resources>
