<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="594dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="231dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Login1"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_action_name"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:background="@color/LightBlue"
            android:onClick="LoginButton"
            android:text="@string/Register"
            tools:text="@string/Register"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:clickable="true"
            android:onClick="GosignUpActivity"
            android:text="@string/NoaccountyetCreateone"
            android:layout_gravity="center"
            android:gravity="center"

            android:textSize="15dp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>